--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,15 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
     }
 
     buildTypes {
@@ -39,6 +46,7 @@ dependencies {
     implementation 'androidx.work:work-runtime:2.3.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.core:core-ktx:+"
     testImplementation 'org.mockito:mockito-core:3.2.0'
@@ -47,6 +55,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.code.gson:gson:2.8.5'
     testImplementation 'org.mockito:mockito-inline:2.13.0'
+    implementation "androidx.work:work-runtime:2.3.1"
+    androidTestImplementation "androidx.work:work-testing:$work_version"
+    androidTestImplementation 'androidx.test:core:1.2.0'
+    testImplementation "androidx.work:work-testing:$work_version"
+
+    testImplementation 'androidx.test:core:1.3.0'
 
 }
 repositories {
